# AlohaOS-Vibe-Edition

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  TODO.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  compiler-debug.yml  elf-smoke.yml  handle-smoke.yml  ring3-smoke.yml  scheduler-hour.yml  spawn-smoke.yml  syscall-smoke.yml  user-fault-smoke.yml  user-protection-smoke.yml  user-resume-smoke.yml  user-shell-smoke.yml
boot/: Cargo.toml
boot/src/: main.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
common/src/: lib.rs
kernel/: Cargo.toml  kernel.ld
kernel/src/: address_space.rs  backtrace.rs  elf.rs  fat32.rs  font.rs  framebuffer.rs  gdt.rs  handle.rs  heap.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  paging.rs  pic.rs  process.rs  process_runtime.rs  process_table.rs  scheduler.rs  serial.rs  shell.rs  smoke.rs  smoke_user_shell.rs  spawn.rs  supervisor.rs  sync.rs  syscall.rs  syscall_arch.rs  syscall_entry.rs  task_context.rs  task_stacks.rs  timer.rs  user_mode.rs  user_shell_smoke.rs  virtio_blk.rs
scripts/: build.ps1  create-fat32.py  run-qemu.ps1  symbolize-backtrace.py
user/runtime/: Cargo.toml  README.md
user/runtime/src/: lib.rs
user/shell/: Cargo.toml
user/shell/src/: lib.rs
user/test-child/: Cargo.toml  linker.ld
user/test-child/src/: main.rs
user/test-shell/: Cargo.toml  linker.ld
user/test-shell/src/: main.rs
