[workspace]
resolver = "2"
members = ["boot", "kernel", "common", "user/runtime", "user/shell", "user/test-child", "user/test-shell"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

# User fixtures are linked at the high-half user base and compiled with the
# large code model. Keep their dependencies out of workspace LTO so LLVM does
# not reject mixed code-model module flags.
[profile.release.package.aloha-test-child]
lto = false
codegen-units = 1

[profile.release.package.aloha-test-shell]
lto = false
codegen-units = 1
