[workspace]
resolver = "2"
members = ["boot", "kernel", "common", "user/runtime", "user/shell", "user/test-child", "user/test-shell"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = false

# User fixtures are linked at the high-half user base and compiled with the
# large code model. Keep release code generation deterministic without LTO,
# which also avoids mixed LLVM code-model metadata across the runtime.
[profile.release.package.aloha-test-child]
codegen-units = 1

[profile.release.package.aloha-test-shell]
codegen-units = 1
