[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []
scheduler-stress = []
m0-smoke = []
exception-smoke = []
ring3-smoke = []
syscall-smoke = []
elf-smoke = []
user-ud-smoke = []
user-nx-smoke = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
